# kotlin-ohos-napi-interop

./: build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/include/: dynamic_api.h
entry/src/main/cpp/kotlin/: KNObject.kt  compile  dynamic_api.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
